--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 a {
     text-decoration: none;
@@ -13,11 +15,11 @@ ul {
 }
 .container {
     margin: 0 auto;
-    width: 1600px;
+    /* width: 1600px; */
 }
 /* header */
 .header {
-    width: 1600px;
+    /* width: 1600px; */
     margin: 0 auto;
 }
 .header__menu li {
@@ -62,19 +64,25 @@ ul {
 }
 /* banner */
 .banner {
-    width: 1600px;
-    height: 1012px;
-    margin: 0 auto;
-    
+    /* width: 1600px; */
+    /* height: 1012px;
+    margin: 0 auto; */
+    background:linear-gradient(180deg, rgba(242, 249, 255, 0.12) 0%, #F2F9FF 100%);
 }
 
 .banner__inner {
-   padding: 128px 10px 0px;
-   height: 878px;
-   background:linear-gradient(180deg, rgba(242, 249, 255, 0.12) 0%, #F2F9FF 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
 }
-.banner__inner-text {
-    margin-top: 34px;
+.banner__inner-text h4 {
+    padding-top: 114px;
+}
+
+.banner__inner-text p {
+    padding-top: 27px;
 }
 .title-center {
     font-weight: 500;
@@ -93,49 +101,104 @@ ul {
    
 }
 .banner__inner-btn {
-    margin-top: 29px;
-    flex-wrap: wrap;
+    padding-top: 29px;
+    padding-bottom: 483px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.banner__inner-graphic{
-    flex: 0 0 60%;
-    max-width: 60%;
+.button {
+    margin: auto;
+    text-decoration: none;
+    font-size: 16px;
+    color: #FFFFFF;
+    background-color: #3751FF;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border-radius: 100px;
+    padding: 12px 14px 12px 16px;
+    width: 148px;
+    height: 50px;
+    border: 1px solid #3751FF;
+    
 }
+
+
 .banner__inner-graphic img {
     max-width: 100%;
     height: auto;
     vertical-align: middle;
     border-style: none;
+    overflow: hidden;
+    margin-left: 70px;
 }
 .banner__btn {
   text-align: center;
   margin-top: 29px; 
+  padding-bottom: 483px;
   vertical-align: middle;
 }
+
 .banner__btn-buy {
+    display: flex;
+    text-align: center;
+    background: #3751FF;
+    border-radius: 100px;
+    padding: 12px 14px 12px 16px;
     width: 148px;
     height: 50px;
-    background: #3751FF;
     border: 1px solid #3751FF;
-    border-radius: 100px;
-    color: #FFFFFF;
-    padding: 10px 30px;
+    color: #FFFFFF; 
 }
-.banner__btn-see {
-    width: 200px;
-    height: 50px;
+.banner__btn-buy a {
+    margin: auto;
+    text-decoration: none;
     font-size: 16px;
-    line-height: 50px;
-    text-align: center;
-    color: #455880;
-    border-radius: 100px;
-    
-    border: 1px solid #fff;
-}
-.logo {
-    width: 1600px;
-    margin: 0 auto;
+    color: #FFFFFF;
 }
 
+.banner__btn-see {
+    display: flex;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgb(0 0 0 / 5%);
+    border-radius: 100px;
+    margin-left: 23px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+}
+.banner__btn-see a {
+    margin: auto;
+    text-decoration: none;
+    font-size: 16px;
+    color: #455880;
+}
+.promo__graphik{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -400px;
+}
+.promo__img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    border-style: none;
+    overflow: hidden;
+    margin-left: 70px;
+}
+.logo {
+    /* width: 1600px; */
+    margin: 0 auto;
+}
+.logo__inner {
+    margin-top: 159px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .logo__inner-text {
     text-align: center;
 }
@@ -157,13 +220,20 @@ ul {
     margin-top: 50px;
     
 }
-.main {
+/* .main {
     width:1600px ;
     margin: 0 auto;
+} */
+.main__box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .main__inner {
-   
-    margin-top: 160px;
+    margin-top: 159px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 .main__inner-title {
@@ -175,9 +245,180 @@ ul {
     color: #1E266D;
 
 }
-.main__inner-left-photo {
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+
+.main__cards {
+    margin-left: 0;
+}
+.block__card {
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid rgba(69, 88, 128, 0.2);
+    margin-top: 112px;
+}
+.main__img {
+    margin-right: 135px;
+}
+.icon-1 {
+    background: url(../image/Icon1.png) no-repeat left;
+    padding-left: 90px;
+}
+.icon-2 {
+    background: url(../image/Icon2.png) no-repeat left;
+    padding-left: 90px;
+}
+.icon-3 {
+    background: url(../image/Icon3.png)no-repeat left ;
+    padding-left: 90px;
+}
+.card__tittle {
+    font-size: 22px;
+    color: #1E266D;
+}
+.card__text {
+    font-size: 18px;
+    color: #455880;
+    padding-bottom: 30px;
+}
+.portfolio {
+    margin-top: 40px;
+    padding-top: 139px;
+    background-color: #FFF9EA;
+}
+.portfolio__block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.tittle {
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 60px;
+    text-align: center;
+    color: #1E266D;
+}
+.portfolio__text {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    line-height: 150%;
+    text-align: center;
+    max-width: 335px;
+    font-size: 21px;
+    color: #455880;
+}
+.revies__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 232px;
+    margin-bottom: 150px;
+}
+.revies__tittle {
+    text-align: center;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 60px;
+    color: #1E266D;
+}
+.revies__card {
+    display: flex;
+    margin-top: 56px;
+    align-items: center;
+    justify-content: space-between;
+    vertical-align: middle;
+    
+}
+.card__box {
+    max-width: 373px;
+    min-height: 407px;
+    border: 1px solid rgba(69, 88, 128, 0.2);
+    border-radius: 4px;
+    padding-left: 43px;
+    padding-right: 43px;
+    padding-top: 38px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 32px;
+}
+.card__text {
+    max-width: 286px;
+    min-height: 211px;
+    font-size: 18px;
+    line-height: 180%;
+    color: #455880;
+    padding-bottom: 19px;
+}
+.card__image {
+    padding-top: 39px;
+}.card__name {
+    margin-top: 23px;
+    font-size: 22px;
+    color: #1E266D;
+}
+.text__test {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #455880;
+    padding-bottom: 19px;
+}
+.banner__bottom {
+    background: #3751FF;
+}
+.bunner__bottom-block {
+    display: flex;
+    align-items: left;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 88px 211px 115px 205px;
+}
+.bunner__bottom-tittle {
+    /* padding-top: 88px;
+    padding-bottom: 115px;
+    padding-left: 205px; */
+    max-width: 600px;
+    font-size: 48px;
+    color: #FFFFFF;
+    text-align: left;
+}
+.tittle {
+    font-size: 56px;
+    line-height: 105%;
+    text-align: left; 
+    
+}
+.bunner__bottom-button-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 211px;
+
+}
+.bunner__bottom-button-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 245px;
+    min-height: 56px;
+    border-radius: 100px;
+    padding: 12px 14px 12px 16px;
+    background: #FFFFFF;
+    color: #455880;
+    border-radius: 100px;
+}
+.bunner__bottom-button {
+    background: url(../image/iconenvelope.png) no-repeat left;
+    font-size: 18px;
+    text-align: center;
+    color: #455880;
+    padding-left: 44px;
+}
+.bunner__bottom-text {
+    padding-top: 8px;
+    font-size: 16px;
+    text-align: right;
+    color: #DFE0EB;
 }
