--- a/HW_lesson8/scss/style.scss
+++ b/HW_lesson8/scss/style.scss
@@ -13,15 +13,19 @@
         font-family: 'Roboto', sans-serif;
         font-size: 16px;
         line-height: 24px;
+        margin-left: 97px;
             li {
             margin-right: 38px;
+        }
+        li:hover {
+            color:#4F56F1;
         }
             a {
                 text-decoration: none;
             }
     }
     .header__btn {
-       
+        display: flex;
         margin-left: 720px;
         font-family: 'Roboto', sans-serif;
         font-size: 16px;
@@ -29,7 +33,8 @@
         text-align: center;
         letter-spacing: 0.02em;
         
-        .header__btn-1 {
+        
+        .header__btn-in {
             width: 120px;
             height: 60px;
             background-color: #FFF;
@@ -37,8 +42,9 @@
             color: #1B0A42;
             font-size: 16px;
             line-height: 24px;
+            cursor: pointer;
         }
-        .header__btn-2 {
+        .header__btn-up {
             width: 120px;
             height: 60px; 
             color: #fff;
@@ -46,15 +52,22 @@
             background: #4F56F1;
             border-radius: 6px;
             font-size: 16px;
-            line-height: 24px;          
+            line-height: 24px;     
+            cursor: pointer;     
         }
     }
 }
 .main {
+    width: 1300px;
+    margin: 0 auto;
     display: flex;
     box-sizing: border-box;
+    justify-content: center;
+    justify-content: center;
+    padding-top: 100px;
     .main__content{
-        margin: 208px 158px auto 200px;
+        padding-top: 40px;
+        
         h1 {
             display: block;
             font-family: 'Ramaraja', serif;
@@ -80,9 +93,10 @@
             font-size: 16px;
             line-height: 32px;
             margin-top: 50px;
+            cursor: pointer;
         }
     }
     .main__banner-img {
-        padding: 96px 94px  ;
+        padding-left: 115px  ;
     }
 }
